--- a/WebServicesDemo/Web.config
+++ b/WebServicesDemo/Web.config
@@ -7,6 +7,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
+    </httpModules>
   </system.web>
   <system.codedom>
     <compilers>
@@ -18,4 +21,33 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <remove name="ApplicationInsightsWebTracking"/>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
+        preCondition="managedHandler"/>
+    </modules>
+  </system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WeatherSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="WeatherSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx"
+        binding="basicHttpBinding" bindingConfiguration="WeatherSoap"
+        contract="WeatherService.WeatherSoap" name="WeatherSoap" />
+      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx"
+        binding="customBinding" bindingConfiguration="WeatherSoap12"
+        contract="WeatherService.WeatherSoap" name="WeatherSoap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
